http://bugzilla.zimbra.com/show_bug.cgi?id=9583 bug: 9583 Subtracted a reasonable amount of room for popup menu borders so that the display doesn't look clipped. Also fixed background color for empty menu items.

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -373,7 +373,7 @@
 .DwtMenuItem-Separator 					{	@MenuItemSeparator@	}
 
 /* ??? USE? */
-.DwtMenuCascadeCell 					{	@LeftSeparator@		}
+.DwtMenuCascadeCell 					{	background-color:@_BaseColorL25_@; @LeftSeparator@		}
 
 
 
